--- a/CADSimulation/CADSimulation/CADSimulation.vcxproj
+++ b/CADSimulation/CADSimulation/CADSimulation.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -37,7 +37,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
     <UseOfMfc>Static</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -90,7 +90,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -136,7 +136,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_CRT_SECURE_NO_WARNINGS;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -193,6 +193,7 @@
     <ClInclude Include="CADShapeDrag.h" />
     <ClInclude Include="CADShapeEllipse.h" />
     <ClInclude Include="CADShapeLine.h" />
+    <ClInclude Include="CADShapePencil.h" />
     <ClInclude Include="CADShapePolygon.h" />
     <ClInclude Include="CADShapeRect.h" />
     <ClInclude Include="CADShapeSelection.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="CADShapeDrag.cpp" />
     <ClCompile Include="CADShapeEllipse.cpp" />
     <ClCompile Include="CADShapeLine.cpp" />
+    <ClCompile Include="CADShapePencil.cpp" />
     <ClCompile Include="CADShapePolygon.cpp" />
     <ClCompile Include="CADShapeRect.cpp" />
     <ClCompile Include="CADShapeSelection.cpp" />
